--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,9 @@ name: Publish to GitHub Pages
 
 on:
   push:
-    branches: [ dev ]
-
+    branches: 
+    - dev
+  
  publish:
     runs-on: ubuntu-latest
     steps:
