--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Check out
         uses: actions/checkout@v1
 
-      - name: Generate your awesome content
-        run: # Your amazing generate action
+#      - name: Generate your awesome content
+#        run: # Your amazing generate action
 
       - name: Publish generated content to GitHub Pages
         uses: tsunematsu21/actions-publish-gh-pages@v1.0.1
